# router/order.go
@@ -1,0 +1,16 @@
+package router
+
+import (
+	"goshop/admin-api/controller"
+	"goshop/admin-api/pkg/core/routerhelper"
+	"goshop/admin-api/pkg/middleware"
+
+	"github.com/gin-gonic/gin"
+)
+
+func init() {
+	routerhelper.Use(func(r *gin.Engine) {
+		g := routerhelper.NewGroupRouter("order", new(controller.Order), r, middleware.VerifyToken())
+		g.Get("/index")
+	})
+}
